# BoulderBot

./: Cargo.toml
src/: interpreter.rs  lib.rs  main.rs
src/interpreter/: commands.rs  messages.rs
telegram_bots/: gen_self_signed.sh  get_web_hook.sh  nginx-config  set_web_hook.sh  test_req.sh
