[package]
name = "boulder-bot"
version = "0.1.0"
authors = ["Jakub Trnka <jak3264@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
tokio = {version = "0.2.13", features = ["macros"]}
hyper = {version = "0.13.4", features = ["stream"]}
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.49"
